--- a/VQM/Source/Makefile.windows
+++ b/VQM/Source/Makefile.windows
@@ -3,20 +3,22 @@
 #
 # This makefile can be used to build QuantumKernel.exe on Windows
 #
-#
 # To build it, use the commands
 #
 # in a cygwin bash shell, do:
 # PATH=/cygdrive/c/gcc/bin:/cygdrive/c/gcc:/usr/local/bin:/usr/bin/:"/cygdrive/c/Program Files/Wolfram Research/Mathematica/11.3/SystemFiles/Links/MathLink/DeveloperKit/Windows-x86-64/CompilerAdditions"
 
-# make clean
-# make -f Makefile.windows
+#PATH := $(PATH):$(PWD):/cygdrive/c/gcc/bin:/cygdrive/c/gcc:/usr/local/bin:/usr/bin/:"/cygdrive/c/Program Files/Wolfram Research/Mathematica/11.3/SystemFiles/Links/MathLink/DeveloperKit/Windows-x86-64/CompilerAdditions"
+#SHELL := env PATH=$(PATH) /bin/bash
+
+#  make -f Makefile.windows; mv QuantumKernel.exe .. ; make -f Makefile.windows clean
+#  make -f Makefile.windows; mv QuantumKernel.exe .. 
 
 CPP = /cygdrive/c/gcc/bin/x86_64-w64-mingw32-g++.exe
 EXTRA_CFLAGS=-mwindows
 
 INCDIR=.
-LIBDIR=.
+LIBDIR=./lib/windows
 
 MLLIB = ML64i4cyg
 
@@ -27,15 +29,18 @@ BINARIES = QuantumKernel.exe
 
 all : ${BINARIES}
 
-QuantumKernel.exe: MathLinkGlue.o MathStubs_windows.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o
-	${CPP} ${EXTRA_CFLAGS} -I${INCDIR} MathLinkGlue.o MathStubs_windows.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o -L${LIBDIR} -l${MLLIB} -o $@
+QuantumKernel.exe: MathLinkGlue.o MathStubs_vqm.o TFunction.o TOperator.o MathLinkUtilities.o TDomain.o 
+	${CPP} ${EXTRA_CFLAGS} -I${INCDIR} MathLinkGlue.o MathStubs_vqm.o TFunction.o TOperator.o MathLinkUtilities.o -L${LIBDIR} -l${MLLIB} -o $@
+
+#QuantumKernel.exe: MathLinkGlue.o MathStubs_vqm.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o
+#	${CPP} ${EXTRA_CFLAGS} -I${INCDIR} MathLinkGlue.o MathStubs_vqm.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o -L${LIBDIR} -l${MLLIB} -o $@
 
 .cpp.o :
-	${CPP} -w -c -I${INCDIR} $<
+	${CPP} -c -I${INCDIR} $<
 
-MathStubs_windows.cpp : mathlink_windows.tm
+MathStubs_vqm.cpp : mathlink_vqm.tm
 	${MPREP} $? -o $@
 
 clean :
-	@ ${RM} -f *.o MathStubs_windows.cpp ${BINARIES}
+	@ ${RM} -f *.o MathStubs_vqm.cpp ${BINARIES}
 
