--- a/VQM/Source/Makefile.linux
+++ b/VQM/Source/Makefile.linux
@@ -14,8 +14,6 @@ CADDSDIR = ${MLINKDIR}/${SYS}/CompilerAdditions
 EXTRA_CFLAGS=
 MLLIB = ML64i4 
 
-#INCDIR=.
-#LIBDIR=./lib/linux
 INCDIR = ${CADDSDIR}
 LIBDIR = ${CADDSDIR}
 
@@ -27,7 +25,8 @@ BINARIES = QuantumKernel64
 all : ${BINARIES}
 
 QuantumKernel64: MathLinkGlue.o MathStubs_vqm.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o
-	${CPP}  -I${INCDIR} MathLinkGlue.o MathStubs_vqm.o TDirac3D.o TFunction.o TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o -L${LIBDIR} -l${MLLIB} -lm -lpthread -lrt -lstdc++ -ldl -luuid -o $@
+	${CPP}  -I${INCDIR} MathLinkGlue.o MathStubs_vqm.o TDirac3D.o TFunction.o  TOperator.o TPauli3D.o TSchroedinger2D.o MathLinkUtilities.o TDirac2D.o \
+	TDomain.o TPauli2D.o TSchroedinger1D.o TSchroedinger3D.o  -L${LIBDIR} -l${MLLIB} -lm -lpthread -lrt -lstdc++ -ldl -luuid -o ../$@
 
 .cpp.o :
 	${CPP} -w -c -I${INCDIR} $<
